2012-04-13  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Fixed entities trouble in the action
	exist check merged from trunk

2012-04-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/DataServer.pm: Merged from trunk. Check for single tag
	  XMLs. Fixes bug #3514207.

2012-04-04  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/WMIServer.pm: Merged from trunk. Put a regexp that
	  could crash the server inside an eval. Fixes bug #3509354.

2012-04-03  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/NetworkServer.pm: Merged from trunk. Fixed the
	  return value of pandora_query_snmp when an OID cannot be translated.

2012-03-20 Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_db.pl: added lines to purge the contents in the report that
	have not a modules or agents. 
	
2012-03-08  Koichiro Kikuchi <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk. Fixed wrong SQL of my
	 previous commit.

2012-03-08  Koichiro Kikuchi  <koichiro@rworks.jp>

	* util/pandora_db.pl: Merged from trunk. Don't delete alerts if
	 non-init/unknown module to which these alerts assigned has not
	 been deleted.

2012-03-07  Sancho Lerena <slerena@artica.es>

        * util/pandora_xml_stress.conf
        util/pandora_xml_stress.pl: Now xml_stress tool can use units
        in the XML generated files. Default configuration file is useful
        to generate "real" scenarios.


2012-03-07  Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/Core.pm: Updated version.

	* lib/PandoraFMS/DataServer.pm: Support for "UNIT" tag in the
	XML to update module data units from the XML.

	* util/pandora_csvbridge.pl: New tool to create XML data files
	from CSV files containing data.

	* util/pandora_watchdog.sh: Watchdog for Pandora FMS server,
	taken from the documentation and updated.

2012-02-28 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* util/pandora_manage.pl: Modify call to function 