@@ -1,3 +1,8 @@
+2012-04-17  Sergio Martin <sergio.martin@artica.es>
+
+	* util/pandora_db.pl: Fixed parameters gathering and
+	clean undeveloped options from help for bug 3486190
+
 2012-04-13  Sergio Martin <sergio.martin@artica.es>
 
 	* util/pandora_manage.pl: Fixed entities trouble in the action
